# gascity-packs

./: .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  CONTEXT.md  OUTSIDE-AGENTS.md  README-contributing.md  README-featured.md  README.md  registry.toml  validate_registry.py
.beads/: config.yaml  metadata.json
bmad/: README.md  REQUIREMENTS.md  pack.toml
compound-engineering/: README.md  REQUIREMENTS.md  pack.toml
contributing/: README.md  pack.toml
discord/: README.md
docs/: skills-materialization.md  substrate-map.md
gascity/: README.md  REQUIREMENTS.md  pack.toml
gstack/: REQUIREMENTS.md
mathcity/: BEADPOLICY.md  CODEX-REVIEW-RESPONSE-2026-07-08.md  DRAINS-ANALYSIS-2026-07-08.md  IMPORTS-GC-MIGRATION-PLAN-2026-07-08.md  MANIFESTO.md  ONBOARDING.md  POLICY-POLICY.md  POLICY-beads.md  POLICY-formulas.md  POLICY-skills.md  README-beads.md  README-formulas.md  README-skills.md  README.md  pack.toml
mathcity/subdomains/proof-assist/mcp/scholar/: README.md  pyproject.toml
mathcity/subdomains/proof-assist/mcp/scholar/src/scholar_mcp/: __init__.py  server.py
mathcity/subdomains/proof-assist/mcp/stacks/: README.md  pyproject.toml
mathcity/subdomains/proof-assist/mcp/stacks/src/stacks_mcp/: __init__.py  server.py
mathematics/: PLAN.md  README.md  pack.toml
ops/: README.md  pack.toml
oversight-rig/: .gitignore  README.md  pack.toml
pr-pipeline/: README.md
pr-review/: README.md  pack.toml
scripts/: gascity_pack_inference_gate.py
slack-full/: README.md
superpowers/: README.md  REQUIREMENTS.md  pack.toml
tests/: test_brief_stack_low.py  (+9 more)
(+630 files in other folders)
