[project]
name = "scholar-mcp"
version = "0.1.0"
description = "MCP server for Semantic Scholar academic paper search."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=3.4.0",
    "requests>=2.28.0",
]

[project.scripts]
scholar-mcp = "scholar_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholar_mcp"]
