[project]
name = "stacks-mcp"
version = "0.1.0"
description = "MCP server for the Stacks Project (stacks.math.columbia.edu) — algebraic geometry and commutative algebra reference."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastmcp>=3.4.0",
    "requests>=2.28.0",
]

[project.scripts]
stacks-mcp = "stacks_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stacks_mcp"]
